<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NowLauncher</string>
    <string name="action_settings">Settings</string>
    <string name="locate_widget">City</string>
    <string name="date_widget">Date</string>
    <string name="todo">TODO</string>
    <string name="digitalclock">DigitalClock</string>
    <string name="temperature">Temperature</string>
    <string name="icon">Icon</string>
    <string name="all_apps_tab">All apps</string>
    <string name="favourites_tab">Favourites</string>
    <string name="weather">Weather</string>
    <string name="menu_settings">Menu settings</string>
    <string name="weather_custom_checktitle">Enable custom location weather</string>
    <string name="weather_custom_title">Select the location for the weather</string>
    <string name="location_null">No location found</string>
    <string name="drawer">Drawer</string>
    <string name="drawer_orientation">Drawer Orientation</string>
    <string name="drawerSearchHint">Search applications…</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="animation">Animation</string>
    <string name="animationset">Set the animation</string>
    <string name="normalanimation">Normal Animation</string>
    <string name="cardanimation">Card Animation</string>
    <string name="zoomoutanimation">Zoom Out Animation</string>
    <string name="cubeoutanimation">Cube Out Animation</string>
    <string name="cubeinanimation">Cube In Animation</string>
    <string name="rotatenanimation">Rotate Animation</string>
    <string name="rotateinnanimation">Rotate in the page and fade Animation</string>
    <string name="drawer_rows">Drawer Rows</string>
    <string name="drawer_coloums">Drawer Coloums</string>
    <string name="music_artist">Artist</string>
    <string name="music_title">Title</string>
    <string name="music_album">Album</string>
    <string name="theme_title">Themes</string>
    <string name="theme_icon_checktitle">Enable icon pack</string>
    <string name="theme_icon_title">Select applications to replace icons</string>
    <string name="drawer_restart">Restart drawer</string>
    <string name="drawer_search_text">Select the mode to search applications</string>
    <string name="drawer_search_contains">Applications that contains chars</string>
    <string name="drawer_search_start">Applications that start with chars</string>
    <string name="home_title">Home</string>
    <string name="home_use_wallpaper_check">Enable use of wallpaper</string>
    <string name="home_wallpaper_set">Set the wallpaper</string>
    <string name="drawer_menu_title">Select action:</string>
    <string name="drawer_menu_uninstall">Uninstall</string>
    <string name="drawer_menu_manage">Manage</string>
    <string name="drawer_menu_addhome">Add to home</string>
    <string name="drawer_menu_removehome">Remove from home</string>
    <string name="drawer_menu_addfavourite">Add to favourite</string>
    <string name="drawer_menu_sendvia">Send via</string>
    <string name="swipe_panel_name">Favourite applications</string>
    <string name="right_swipe_panel">Right Swipe Panel</string>
    <string name="right_swipe_panel_title">Enable right swipe panel service</string>
    <string name="right_swipe_panel_description">You can access to a panel with your favourite apps quickly with a swipe right to left</string>
    <string name="right_swipe_panel_dimension_title">Specify the width of the sensible area to open the right swipe panel</string>
    <string name="right_swipe_panel_dimension_description">At higher values correspond to greater sensitivity of the swipe gesture, but it could interfere with normal uses. (Mid-low values recommended, like 5px)</string>
    <string name="right_swipe_panel_favourite_title">Favourites</string>
    <string name="right_swipe_panel_volume_title">Volume</string>
</resources>